fix: add overflow-overlay

--- a/pages/main/styles/style.scss
+++ b/pages/main/styles/style.scss
@@ -24,6 +24,7 @@ body {
     max-width: var(--primary-width);
     margin: auto;
     @media (max-width: $breakpoint-tablet) {
+        overflow-y: overlay;
         // width: 100vw;
         // !!!!!!!
     }
